# mcd-coupon

./: .gitignore  Cargo.toml  README.md  mcp.json
.github/workflows/: release.yml
src/: main.rs
src/config/: mod.rs
src/mcp/: client.rs  mod.rs  types.rs
src/mcp_server/: handlers.rs  mod.rs  types.rs
src/ui/: app.rs  mod.rs
src/ui/screens/: main_screen.rs  mod.rs  token_input.rs
src/utils/: mod.rs
src/web/: mod.rs
src/web/templates/: index.html
