[package]
name = "mcd-coupon-tui-rust"
version = "0.2.0"
edition = "2021"

[dependencies]
# TUI dependencies
ratatui = "0.26.0"
crossterm = "0.27.0"

# HTTP client
reqwest = { version = "0.12.0", features = ["json", "rustls-tls"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35.0", features = ["full"] }

# Web server for HTML mode
axum = "0.7.0"
axum-extra = "0.9.0"

# HTML templating
handlebars = "5.0.0"

# Markdown rendering
pulldown-cmark = "0.9.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = { version = "0.14.0", features = ["json"] }

# File system operations
fs2 = "0.4.3"
dirs = "5.0.1"

# Time handling
chrono = "0.4"

[[bin]]
name = "mcd-coupon-tui-rust"
path = "src/main.rs"
default-run = "mcd-coupon-tui-rust"

